# ScriptableUser4

./: CMakeLists.txt  DevLog.docx  TODO
example_scripts/: document.md  example.scu  unit.scu
plugins/: example_plugin.cpp  gdi.cpp  gdi.hpp  maths.cpp  maths.hpp  windowsapi.cpp  windowsapi.hpp
src/: condition.cpp  internal_commands.cpp  internal_commands.hpp  main.cpp  platform.hpp  platform_windows.cpp  scPluginApi.hpp  scdef.hpp  sctype.cpp  sctype.hpp  scuser.cpp  scuser.hpp  scvar.cpp  scvar.hpp
